<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- A plain text button.  The button label is read by TalkBack.
    No content description needed -->
    <Button
        android:id="@+id/button_plain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- An ImageButton. TalkBack cannot identify this button and
    reports it as "unlabelled button". Use android:contentDescription
    to provide a speakable label for the image. -->
    <ImageButton
        android:id="@+id/button_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/discard"
        app:layout_constraintLeft_toRightOf="@+id/button_plain"
        app:layout_constraintTop_toTopOf="@+id/button_plain"
        app:srcCompat="@drawable/ic_action_discard" />

    <!-- Checkboxes. The checkbox text is read by TalkBack. No content
    description is needed. -->
    <CheckBox
        android:id="@+id/checkbox_jetpack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkbox_text_jetpack"
        app:layout_constraintLeft_toLeftOf="@+id/button_plain"
        app:layout_constraintTop_toBottomOf="@+id/button_plain" />

    <CheckBox
        android:id="@+id/checkbox_hyperspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_text_hyperspace"
        app:layout_constraintLeft_toLeftOf="@+id/checkbox_jetpack"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_jetpack" />

    <!-- An ImageView.  By default, ImageViews are treated as decorative images
    with no functionality or label and are ignored by TalkBack. Use
    android:contentDescription to provide a speakable label for the image. Use
    android:focusable to indicate this is a meaningful element.
    in the app. -->
    <ImageView
        android:id="@+id/image_partly_cloudy"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/partly_cloudy"
        android:focusable="true"
        app:layout_constraintLeft_toLeftOf="@+id/checkbox_hyperspace"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_hyperspace"
        app:srcCompat="@drawable/partly_cloudy" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:labelFor="@id/editText"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_partly_cloudy" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/one"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:srcCompat="@drawable/ic_image_1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:focusable="false"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:srcCompat="@drawable/ic_image_2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/three"
        android:labelFor="@id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/ic_image_3" />

</androidx.constraintlayout.widget.ConstraintLayout>